<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora2.3.3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Calculadora</string>
    <string name="pulsacion_tecla">Pulsacion de tecla!!!</string>
    <string name="b0">0</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="bmenos">-</string>
    <string name="bpor">x</string>
    <string name="bdivido">/</string>
    <string name="bc">C</string>
    <string name="bac">AC</string>
    <string name="bpunto">.</string>
    <string name="bigual">=</string>
    <string name="bmas">+</string>
    <string name="bPorcent">%</string>
    <string name="noImplementado">No implementado</string>
    <string name="longitudMaxima">Longitud máxima</string>
    <string name="divisionPorCero">No se puede dividir por 0</string>
    <string name="error">Se ha producido un error</string>
    <string name="valorInicialCajaDeTexto">0</string>
</resources>
