<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/tvResultado"
            android:textSize="35dp" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp" >

            <Button
                android:id="@+id/b7"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="@string/b7" />


            <Button
                android:id="@+id/b8"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="@string/b8" />

            <Button
                android:id="@+id/b9"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="@string/b9" />

            <Button
                android:id="@+id/bSuma"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="+" />

        </TableRow>


        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp" >

            <Button
                android:id="@+id/b4"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="@string/b4" />

            <Button
                android:id="@+id/b5"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="@string/b5" />

            <Button
                android:id="@+id/b6"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="@string/b6" />

            <Button
                android:id="@+id/bResta"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="@string/bmenos" />

        </TableRow>


        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp" >

            <Button
                android:id="@+id/b1"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="@string/b1" />

            <Button
                android:id="@+id/b2"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="@string/b2" />

            <Button
                android:id="@+id/b3"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="@string/b3" />

            <Button
                android:id="@+id/bMultiplicacion"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pulsacion"
                android:text="@string/bpor" />

        </TableRow>


        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp" >

            <Button
                android:id="@+id/b0"
                style="@style/boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:onClick="pulsacion"
                android:text="@string/b0" />

            <Button
                android:id="@+id/bPunto"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="pulsacion"
                android:text="@string/bpunto" />

            <Button
                android:id="@+id/bDivision"
                style="@style/boton.weigth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="pulsacion"
                android:text="@string/bdivido" />

        </TableRow>


        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp" >

            <Button
                android:id="@+id/bIgual"
                style="@style/boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="pulsacion"
                android:text="@string/bigual" />

            <Button
                android:id="@+id/bC"
                style="@style/boton.rojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="pulsacion"
                android:text="@string/bc" />

        </TableRow>

    </TableLayout>

</RelativeLayout>
